--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,11 @@
     ]
   ],
   "plugins": [
-
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-json-strings",
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-import-meta",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose" : true }]
   ]
 }
