--- a/package.json
+++ b/package.json
@@ -48,20 +48,20 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^7.0.0",
+    "compression-webpack-plugin": "^7.1.0",
     "css-loader": "^5.0.1",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-vue": "^7.3.0",
     "eslint-webpack-plugin": "^2.4.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
-    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.1.0",
     "prettier": "^2.2.1",
+    "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "terser-webpack-plugin": "^5.0.3",
     "vue-eslint-parser": "^7.3.0",
