--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jayson991/vue2-template"
+    "url": "git+https://github.com/jayson991/vue2-template"
   },
   "keywords": [
     "vue",
@@ -44,33 +44,33 @@
     "@babel/plugin-transform-async-to-generator": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "autoprefixer": "^10.2.0",
+    "autoprefixer": "^10.2.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^7.1.1",
+    "compression-webpack-plugin": "^7.1.2",
     "css-loader": "^5.0.1",
-    "css-minimizer-webpack-plugin": "^1.1.5",
-    "eslint": "^7.17.0",
+    "css-minimizer-webpack-plugin": "^1.2.0",
+    "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.4.1",
     "eslint-webpack-plugin": "^2.4.1",
     "html-webpack-plugin": "^4.5.1",
-    "mini-css-extract-plugin": "^1.3.3",
+    "mini-css-extract-plugin": "^1.3.4",
     "postcss-loader": "^4.1.0",
     "prettier": "^2.2.1",
-    "sass": "^1.32.0",
-    "sass-loader": "^10.1.0",
-    "terser-webpack-plugin": "^5.0.3",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
+    "terser-webpack-plugin": "^5.1.1",
     "vue-eslint-parser": "^7.3.0",
     "vue-loader": "^15.9.6",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.11.1",
+    "webpack": "^5.15.0",
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1"
+    "webpack-dev-server": "^3.11.2"
   }
 }
