--- a/.babelrc
+++ b/.babelrc
@@ -4,18 +4,22 @@
       "@babel/preset-env",
       {
         "corejs": 3,
-        "useBuiltIns": "usage"
+        "useBuiltIns": "usage",
+        "targets": {
+          "browsers": [
+            "> 1%",
+            "last 2 versions",
+            "not ie <= 8",
+            "iOS >= 8",
+            "Firefox >= 20",
+            "Android > 4.4"
+          ]
+        }
       }
     ]
   ],
   "plugins": [
-    "@babel/plugin-transform-runtime",
-    "@babel/plugin-syntax-import-meta",
     "@babel/plugin-proposal-json-strings",
-    "@babel/plugin-syntax-dynamic-import",
-    "@babel/plugin-proposal-object-rest-spread",
-    "@babel/plugin-proposal-export-default-from",
-    "@babel/plugin-transform-async-to-generator",
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose" : true }]
   ]
