--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "lint": "eslint ./ --ext .js,.vue",
     "lint:fix": "eslint ./ --ext .js,.vue --fix",
-    "build": "webpack --config config/webpack.config.prod.js",
-    "start": "webpack serve --config config/webpack.config.dev.js"
+    "build": "webpack --config config/webpack.prod.js",
+    "start": "webpack serve --config config/webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -33,44 +33,48 @@
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.12",
-    "@babel/plugin-proposal-export-default-from": "^7.12.1",
-    "@babel/plugin-proposal-json-strings": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/plugin-transform-async-to-generator": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "autoprefixer": "^10.2.1",
-    "babel-eslint": "^10.1.0",
+    "@babel/core": "^7.13.1",
+    "@babel/eslint-parser": "^7.13.4",
+    "@babel/eslint-plugin": "^7.13.0",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/plugin-proposal-json-strings": "^7.12.13",
+    "@babel/preset-env": "^7.13.5",
+    "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^7.1.2",
-    "css-loader": "^5.0.1",
+    "css-loader": "^5.0.2",
     "css-minimizer-webpack-plugin": "^1.2.0",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.4.1",
-    "eslint-webpack-plugin": "^2.4.1",
-    "html-webpack-plugin": "^5.1.0",
-    "mini-css-extract-plugin": "^1.3.4",
-    "postcss-loader": "^4.1.0",
+    "eslint-plugin-vue": "^7.6.0",
+    "eslint-webpack-plugin": "^2.5.2",
+    "html-webpack-plugin": "^5.2.0",
+    "mini-css-extract-plugin": "^1.3.8",
+    "postcss": "^8.2.6",
+    "postcss-loader": "^5.0.0",
     "prettier": "^2.2.1",
-    "sass": "^1.32.4",
+    "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "vue-eslint-parser": "^7.3.0",
+    "vue-eslint-parser": "^7.5.0",
     "vue-loader": "^15.9.6",
-    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.15.0",
-    "webpack-bundle-analyzer": "^4.3.0",
-    "webpack-cli": "^4.3.1",
+    "webpack": "^5.24.0",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8",
+    "iOS >= 8",
+    "Firefox >= 20",
+    "Android > 4.4"
+  ]
 }
