--- a/.babelrc
+++ b/.babelrc
@@ -4,23 +4,8 @@
       "@babel/preset-env",
       {
         "corejs": 3,
-        "useBuiltIns": "usage",
-        "targets": {
-          "browsers": [
-            "> 1%",
-            "last 2 versions",
-            "not ie <= 8",
-            "iOS >= 8",
-            "Firefox >= 20",
-            "Android > 4.4"
-          ]
-        }
+        "useBuiltIns": "usage"
       }
     ]
-  ],
-  "plugins": [
-    "@babel/plugin-proposal-json-strings",
-    ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    ["@babel/plugin-proposal-class-properties", { "loose" : true }]
   ]
 }
