--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jayson991/vue2-template"
+    "url": "git+https://github.com/jaysonwu991/vue2-template"
   },
   "keywords": [
     "vue",
@@ -24,50 +24,51 @@
     "vue-router",
     "vue2-template"
   ],
-  "author": "Jayson Wu <wulingjie991@outlook.com>",
+  "author": "Jayson Wu <jaysonwu991@outlook.com>",
   "license": "MIT",
-  "homepage": "https://github.com/jayson991/vue2-template",
+  "homepage": "https://github.com/jaysonwu991/vue2-template",
   "dependencies": {
-    "core-js": "^3.8.2",
-    "vue": "^2.6.12",
-    "vue-router": "^3.4.9"
+    "core-js": "^3.18.0",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.1",
-    "@babel/eslint-parser": "^7.13.4",
-    "@babel/eslint-plugin": "^7.13.0",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.13.5",
-    "@babel/plugin-proposal-json-strings": "^7.12.13",
-    "@babel/preset-env": "^7.13.5",
-    "autoprefixer": "^10.2.4",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^7.1.2",
-    "css-loader": "^5.0.2",
-    "css-minimizer-webpack-plugin": "^1.2.0",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^8.0.0",
+    "@babel/core": "^7.15.5",
+    "@babel/eslint-parser": "^7.15.7",
+    "@babel/eslint-plugin": "^7.14.5",
+    "@babel/preset-env": "^7.15.6",
+    "@swc/core": "^1.2.88",
+    "autoprefixer": "^10.3.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^9.0.0",
+    "css-loader": "^6.3.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
+    "esbuild-loader": "^2.15.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.6.0",
-    "eslint-webpack-plugin": "^2.5.2",
-    "html-webpack-plugin": "^5.2.0",
-    "mini-css-extract-plugin": "^1.3.8",
-    "postcss": "^8.2.6",
-    "postcss-loader": "^5.0.0",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.1.1",
-    "vue-eslint-parser": "^7.5.0",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.24.0",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^7.18.0",
+    "eslint-webpack-plugin": "^3.0.1",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.3.0",
+    "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1",
+    "prettier": "^2.4.1",
+    "sass": "^1.41.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "swc-loader": "^0.1.15",
+    "terser-webpack-plugin": "^5.2.4",
+    "vue-eslint-parser": "^7.11.0",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.53.0",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.1"
   },
   "browserslist": [
     "> 1%",
