--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A Vue 2.x Template Project",
   "main": "src/index.js",
   "scripts": {
+    "preinstall": "husky install",
     "lint": "eslint ./ --ext .js,.vue",
     "lint:fix": "eslint ./ --ext .js,.vue --fix",
+    "prettify": "prettier --write src/**/*.{js,vue}",
     "build": "webpack --config config/webpack.prod.js",
     "start": "webpack serve --config config/webpack.dev.js"
   },
@@ -53,6 +55,7 @@
     "eslint-plugin-vue": "^8.1.1",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.3.11",
     "postcss-loader": "^6.2.0",
