--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,5 @@
   "proseWrap": "preserve",
   "singleQuote": true,
   "bracketSpacing": true,
-  "trailingComma": "none"
+  "trailingComma": "es5"
 }
